Estilizando e corrigindo classes.

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <h1>Acerte o Numero Secreto.</h1>
     <h3> O numero secreto esta entre <span id="menor-valor">0</span> e <span id="maior-valor">100</span></h3>
 
-    <div id="chute" class="mensage">
+    <div id="chute" class="mensagem">
         <div>Você disse: </div>
         <span class="box">20</span>
-        <span>O numero secreto é maior <i class="fa-solid fa-arrow-up"></i> </span>
+        <div>O numero secreto é maior <i class="fa-solid fa-arrow-up"></i> </div>
     </div>
 
 </body>
