--- a/index.html
+++ b/index.html
@@ -21,5 +21,6 @@
         <div>O numero secreto é maior <i class="fa-solid fa-arrow-up"></i> </div>
     </div>
 
+    <script src="app/sorteioNum.js"></script>
 </body>
 </html>
