--- a/index.html
+++ b/index.html
@@ -22,5 +22,6 @@
     </div>
 
     <script src="app/sorteioNum.js"></script>
+    <script src="app/reconhecimentoDeVoz.js"></script>
 </body>
 </html>
