--- a/index.html
+++ b/index.html
@@ -23,5 +23,6 @@
 
     <script src="app/sorteioNum.js"></script>
     <script src="app/reconhecimentoDeVoz.js"></script>
+    <script src="app/validações.js"></script>
 </body>
 </html>
